--- a/SurveyPackage-RDemo.Rmd
+++ b/SurveyPackage-RDemo.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Linear & Logistic Regression - Answers"
+title: "Survey Package and Regression"
 author: "Samantha-Jo Caetano"
 date: "February 4, 2025"
 output: pdf_document
@@ -34,9 +34,7 @@ head(starwars)
 
 ```
 
-We will be working with `mass`, and `height` throughout this class, so
-let's remove the NAs. Additionally, we will be working with `species`,
-let's categorize species to be `human`, or `other`.
+We will be working with `mass`, and `height` throughout this class, so let's remove the NAs. Additionally, we will be working with `species`, let's categorize species to be `human`, or `other`.
 
 ```{r}
 summary(starwars$mass)
@@ -56,9 +54,7 @@ n=nrow(starwars_clean)
 ```
 
 Let's start by playing around with some SRS ratio estimation. Use the
-`svymean()` function in the `survey` library to run an estimation of the
-mean mass of characters. Assume it was a Simple Random Sample and use
-the finite population correction with $N=224$.
+`svymean()` function in the `survey` library to run an estimation of the mean mass of characters. Assume it was a Simple Random Sample and use the finite population correction with $N=224$.
 
 ```{r}
 #install.packages("survey")
@@ -106,12 +102,7 @@ confint(svyratio(~mass, ~height, design=my.design))
 
 ```
 
-Let's try taking this a step further playing around with some Stratified
-random sampling ratio estimation. Use the `svymean()` function in the
-`survey` library to run a ratio estimation of mass given height. Assume
-the study instead collected the data by stratifying by species, where in
-the population there 16 droids, 80 humans and 128 other species. Use the
-finite population correction with $N=200$ to estimate the mean mass.
+Let's try taking this a step further playing around with some Stratified random sampling ratio estimation. Use the `svymean()` function in the `survey` library to run a ratio estimation of mass given height. Assume the study instead collected the data by stratifying by species, where in the population there 16 droids, 80 humans and 128 other species. Use the finite population correction with $N=200$ to estimate the mean mass.
 
 ```{r}
 table(starwars_clean$species_clean)
@@ -194,8 +185,7 @@ What is the estimate of the model?
 $$\hat{y}_{mass} = \hat{\beta_0} + \hat{\beta_1} x_{height}$$
 $$\hat{y}_{mass} = -11.25 + 0.63 x_{height}$$
 
-What is the different between the output here and the outcome in Task 1?
-What is similar?
+What is the different between the output here and the outcome in Task 1? What is similar?
 
 **Standard errors are different, but estimates are the same.**
 
