--- a/Regression-RDemo.Rmd
+++ b/Regression-RDemo.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Survey Package and Regression"
 author: "Samantha-Jo Caetano"
-date: "February 4, 2025"
+date: "February 25, 2025 "
 output: pdf_document
 editor_options: 
   markdown: 
@@ -36,7 +36,7 @@ head(starwars)
 
 We will be working with `mass`, and `height` throughout this class, so
 let's remove the NAs. Additionally, we will be working with `species`,
-let's categorize species to be `human`, or `other`.
+let's categorize species to be `human`, \`droid\` or `other`.
 
 ```{r}
 summary(starwars$mass)
@@ -57,121 +57,6 @@ starwars_clean
 n=nrow(starwars_clean)
 ```
 
-Let's start by playing around with some SRS ratio estimation. Use the
-`svymean()` function in the `survey` library to run an estimation of the
-mean mass of characters. Assume it was a Simple Random Sample and use
-the finite population correction with $N=224$.
-
-```{r}
-#install.packages("survey")
-library(survey)
-
-## Using the Survey Library
-N=224
-
-my.design <- svydesign(id=~1,
-                       data=starwars_clean,
-                       fpc=rep(N, n))
-
-svymean(~mass, my.design) 
-
-## Check
-mean(starwars_clean$mass)
-var(starwars_clean$mass)
-sqrt((1-n/N)*var(starwars_clean$mass)/n)
-
-```
-
-Additionally, we can use `confint()` to calculate the confidence
-interval:
-
-```{r}
-confint(svymean(~mass, my.design)) 
-```
-
-Additionally, we can use `confint()` to calculate the confidence
-interval:
-
-```{r}
-confint(svymean(~mass, my.design)) 
-```
-
-Use the `svyratio()` function in the `survey` library to run a ratio
-estimation of mass given height. Assume it was a Simple Random Sample
-and use the finite population correction with $N=224$.
-
-```{r}
-
-svyratio(~mass, ~height, design=my.design)
-
-confint(svyratio(~mass, ~height, design=my.design))
-
-```
-
-Let's try taking this a step further playing around with some Stratified
-random sampling ratio estimation. Use the `svymean()` function in the
-`survey` library to run a ratio estimation of mass given height. Assume
-the study instead collected the data by stratifying by species, where in
-the population there 16 droids, 80 humans and 128 other species. Use the
-finite population correction with $N=200$ to estimate the mean mass.
-
-```{r}
-table(starwars_clean$species_clean)
-
-# In the sample there are 4 droids, 20 humans and 32 other species.
-
-# Need to include fpc variable (with pop size for each strata)
-# Need to include a weight variable (with pop/samp size for each strata)
-starwars_clean <- starwars_clean %>% 
-  mutate(pop_fpc = case_when(species_clean=="droid" ~ 16,
-                             species_clean=="human" ~ 80,
-                             species_clean=="other" ~ 128)) %>% 
-  mutate(samp_wt = case_when(species_clean=="droid" ~ 16/4,
-                             species_clean=="human" ~ 80/20,
-                             species_clean=="other" ~ 128/32))
-
-
-strata.design <- svydesign(id=~1,
-                       strata=~species_clean,
-                       weights = ~samp_wt, 
-                       fpc=~pop_fpc,
-                       data=starwars_clean)
-  
-svymean(~mass, design=strata.design)
-confint(svymean(~mass, design=strata.design))
-```
-
-Let's check this calculation by hand. Recall for stratified sampling CI:
-
-For $\mu$:
-$\bar{y}_{st} \pm z_{\alpha/2} \sqrt{\sum_{h=1}^HW_h^2(1-\frac{n_h}{N_h}) s^2_h/n_h}$
-
-Note: $\bar{y}_{st} = \sum_{h=1}^{H}W_h\bar{y}_h$
-
-Note: $W_h = \frac{N_h}{N}$
-
-```{r}
-## Checking "by hand"
-starwars_clean %>% 
-  group_by(species_clean) %>% 
-  summarize(n=n(),
-            ybar=mean(mass),
-            s2 = var(mass))
-
-## Running the calculation:
-nh = c(4, 20, 32)
-Nh = c(16, 80, 128)
-W = Nh/N
-ybar = c(69.75, 81.31, 112.1875)
-s2 = c(2604.2500, 373.7325, 52661.8708) 
-
-ybar_str = sum(W*ybar)
-SE_ybar = sqrt( sum(W^2*(1-nh/Nh)*s2/nh) )
-
-ybar_str
-SE_ybar
-```
-
 ### Task 1: Create a Simple Linear Model to predict mass
 
 Use the `svyglm()` function in the `survey` library to run a linear
@@ -179,6 +64,8 @@ regression estimation of mass given height. Assume it was a Simple
 Random Sample and use the finite population correction with $N=224$.
 
 ```{r}
+library(survey)
+
 N=224
 n=nrow(starwars_clean)
 
@@ -204,13 +91,10 @@ $$\hat{y}_{mass} = -11.25 + 0.63 x_{height}$$
 
 ### Task 2: Create a Linear Model to predict mass
 
-Use the `lm()` function in the `survey` library to run a linear
-regression estimation of mass given height.
+Use the `lm()` function to run a linear regression estimation of mass
+given height.
 
 ```{r}
-#install.packages("survey")
-library(survey)
-
 ## Using the Survey Library
 summary(lm(mass ~ height, data=starwars_clean))
 
@@ -233,7 +117,7 @@ What is similar?
 **Standard errors are different, but estimates are the same.**
 
 What happens if you change the $N$ in Task 1? Try setting
-$N=87, 224, 1000, 10000$
+$N=87, 224, 1000$
 
 ### Task 3: Create a Linear Model to predict mass
 
@@ -246,19 +130,19 @@ fpc.srs = rep(N, n)
 starwars.design <- svydesign(id=~1, data=starwars_clean, fpc=fpc.srs)
 
 mysvylm <- svyglm(mass ~ height + species_clean, starwars.design)
-summary(mysvylm)
+summary(mysvylm) ### SRS
 
 ## Using lm
 mymodel<-lm(mass ~ height + species_clean, data=starwars_clean)
-summary(mymodel)
+summary(mymodel) ## TAUGHT IN STA302
 
 ```
 
 What is the model in this example?
 
 $$y_{mass} = \beta_0 + \beta_1 x_{height} + \beta_2x_{human} + \beta_3x_{other} + \epsilon$$
-This is a "simple linear regression" model (because there is only one
-numeric $x$ variable).
+This is a "multiple linear regression" model (because there is are two
+(more than 1) predictor $x$ variables).
 
 What is the estimate of the model?
 
@@ -331,8 +215,6 @@ $$log\Big(\frac{\hat{p}}{1-\hat{p}}\Big) = -11.45 + 0.06 x_{height} -2.14x_{huma
 Based off the above output, what is the predicted probability of a human
 who is 175cm tall being over 100lbs?
 
-**Answer: 0.05729392**
-
 ```{r}
 pred_odds <- -11.45547800 + 0.06230662*175 -2.14452294*1 -2.04236670*0 
 exp(pred_odds)/(1+exp(pred_odds))
@@ -342,6 +224,47 @@ exp(pred_odds2)/(1+exp(pred_odds2))
 
 pred_prob <- predict(my_glm, tibble(species_clean="human", height=175), type = "response")
 pred_prob
+```
+
+```{r}
+starwars.design <- svydesign(id=~1, data=starwars_clean, fpc=fpc.srs)
+
+mysvyglm <- svyglm(mass_over100 ~ height + species_clean, 
+              family = "binomial", starwars.design)
+
+summary(mysvyglm)
+```
+
+### Task 5: Create a logistic regression for Stratified Random Sampling
+
+For the starwars data, let’s assume the study instead collected the data
+by stratifying by species, where in the population there 16 droids, 80
+humans and 128 other species. Use the finite population correction with
+N=224 to estimate.
+
+Run a logistic regression model mass being over 100lbs given height and
+species.
+
+```{r}
+starwars_clean <- starwars_clean %>% 
+  mutate(pop_fpc = case_when(species_clean=="droid" ~ 16,
+                             species_clean=="human" ~ 80,
+                             species_clean=="other" ~ 128)) %>% 
+  mutate(samp_wt = case_when(species_clean=="droid" ~ 16/4,
+                             species_clean=="human" ~ 80/20,
+                             species_clean=="other" ~ 128/32))
+
+
+strata.design <- svydesign(id=~1,
+                       strata=~species_clean,
+                       weights = ~samp_wt, 
+                       fpc=~pop_fpc,
+                       data=starwars_clean)
+
+mysvyglm <- svyglm(mass_over100 ~ height + species_clean, 
+              family = "binomial", strata.design)
+
+summary(mysvyglm)
 ```
 
 \newpage
